# gs-slam-accelerator

./: Cargo.toml  README.md  pyproject.toml  repomix-output.xml
.github/workflows/: deploy.yml
pkg/: gs_slam_core.d.ts  gs_slam_core.js  gs_slam_core_bg.wasm  gs_slam_core_bg.wasm.d.ts  package.json
src/: lib.rs  shader.wgsl  sr.rs  sr.wgsl
tests/: debug_loaded.py  test_export.py  test_features.py  test_gpu.py  test_load.py  test_sr.py
www/: index.html  index.js
