[package]
name = "gs_slam_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "gs_slam_core"
crate-type = ["cdylib"]

[dependencies]
# UPDATE: Upgrade to 0.23 for Python 3.13 support
pyo3 = { version = "0.23", features = ["extension-module"] }

rayon = "1.8"
wgpu = "0.19"
pollster = "0.3"
futures-intrusive = "0.5"

bytemuck = { version = "1.14", features = ["derive"] }
ply-rs = "0.1"
memmap2 = "0.9"
nalgebra = "0.32"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3