[package]
name = "gs_slam_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# === 機能フラグ (重要: nalgebra をここに追加) ===
[features]
default = ["python"]
python = ["dep:pyo3", "dep:memmap2", "dep:nalgebra"]
wasm = ["dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:web-sys", "dep:console_error_panic_hook", "dep:console_log", "dep:log", "dep:nalgebra"]

# === 依存関係 ===
[dependencies]
# wgpuは全環境で使う
wgpu = { version = "23.0" }
bytemuck = { version = "1.16", features = ["derive"] }
pollster = "0.3"
futures-intrusive = "0.5"

# 数学ライブラリ (重要: optional = true にして機能フラグで管理)
nalgebra = { version = "0.32", optional = true }

# === Python専用 ===
pyo3 = { version = "0.23", features = ["extension-module"], optional = true }
memmap2 = { version = "0.9", optional = true }

# === WASM専用 ===
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
console_log = { version = "1.0", optional = true }
log = { version = "0.4", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
    "Document",
    "Window",
    "HtmlCanvasElement",
    "Element",
    "Location",
    "MouseEvent",   # <--- これがないとエラーになる
    "WheelEvent",   # <--- これがないとエラーになる
    "HtmlInputElement",
    "FileList",
    "File",
    "Blob"
]
optional = true

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
